# servo-gtk

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml
examples/: browser.rs
proto/: ipc.proto
resources/: gresource.xml
servo_gtk/: ipc.rs  key_tables.rs  lib.rs  proto_ipc.rs  resources.rs  servo_runner.rs  web_view.rs  webview.rs
servo_runner/: resource_reader.rs  runner.rs
src/: main.rs  servo_runner.rs  webview.rs
