[package]
name = "servo-gtk"
version = "0.1.0"
edition = "2024"

[lib]
name = "servo_gtk"
path = "servo_gtk/lib.rs"

[[bin]]
name = "servo-runner"
path = "servo_runner/runner.rs"

[[example]]
name = "browser"
path = "examples/browser.rs"

[dependencies]
gio = "0.21.2"
glib = { version = "0.21", features = ["v2_74", "log_macros"] }
gtk = { package="gtk4", version="0.10.1" }
libservo = { git = "https://github.com/servo/servo.git", rev = "0a1633c52ae1d263aa74cfd5c679fcd2669fda64" }
embedder_traits = { git = "https://github.com/servo/servo.git", rev = "0a1633c52ae1d263aa74cfd5c679fcd2669fda64" }
js = { package = "mozjs", git = "https://github.com/servo/mozjs" }
surfman = { version = "0.9", features = ["chains", "sm-angle", "sm-angle-default"] }
gl = "0.14.0"
epoxy = "0.1.0"
libloading = "0.8.8"
euclid = "0.22"
url = "2.3"
dpi = "0.1"
rustls = { version = "0.23.12", default-features = false, features = ["aws-lc-rs"] }
async-channel = "2.5.0"
log = "0.4.0"
image = "0.25"
keyboard-types = "0.8"
prost = "0.13"
bytes = "1.0"

[build-dependencies]
glib-build-tools = "0.21"
prost-build = "0.13"
